tests/snapshots/integration__integration_tests__merge__merge_pre_commit_command_success.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🟡 [33mAuto-staging 1 untracked file:[0m
[107m [0m  feature.txt
🔄 [36mRunning pre-commit:[0m
[107m [0m  [2m[1m[2m[34mecho[2m [2m[32m'Pre-commit check passed'[2m[0m
🔄 [36mCommitting changes with default message...[0m (1 file, [32m+1[0m, no squashing needed)
💡 [2m[2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[0m[0m
[107m [0m  [1mChanges to feature.txt[0m
✅ [32mCommitted changes @ [2m[SHA][0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no rebase needed)
[107m [0m  * [SHA] Changes to feature.txt
[107m [0m   feature.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)
🔄 [36mRemoving [1m[36mfeature[0m[36m worktree & branch in background[0m

----- stderr -----
[0mPre-commit check passed
